Add part token ID header, add method visibility marks.
